# pysimplecli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug_report.md
.github/workflows/: main.yml  publish-on-tag.yml  python-app.yml
simplecli/: __init__.py  simplecli.py
tests/: nested_test.py  test_extract_args.py  test_format_docstring.py  test_help_text.py  test_param.py  test_params_to_kwargs.py  test_passed_args.py  test_simplecli.py  test_wrap.py  utils.py
